Sat Jun  8 17:15:18 2013  Tanaka Akira  <akr@fsij.org>

	* random.c (make_seed_value): Fix the length given for
	  rb_integer_unpack.

Sat Jun  8 16:38:02 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_integer_unpack): Don't use rb_funcall if possible.

	* random.c: Use uint32_t for elements of seed.
	  (make_seed_value): Use rb_integer_unpack.

Sat Jun  8 15:58:18 2013  Tanaka Akira  <akr@fsij.org>

	* random.c (rand_init): Add a cast to fix clang compile error:
	  random.c:410:32: error: implicit conversion loses integer precision:
	  'size_t' (aka 'unsigned long') to 'int' [-Werror,-Wshorten-64-to-32]
	  This cast doesn't cause a problem because len is not bigger than
	  MT_MAX_STATE.

Sat Jun  8 15:30:03 2013  Tanaka Akira  <akr@fsij.org>

	* random.c (rand_init): Use rb_integer_pack.
	  (roomof): Removed.

Sat Jun  8 14:58:32 2013  Tanaka Akira  <akr@fsij.org>

	* internal.h (INTEGER_PACK_FORCE_BIGNUM): New flag constant.

	* bignum.c (rb_integer_unpack): Support INTEGER_PACK_FORCE_BIGNUM.

	* random.c (int_pair_to_real_inclusive): Use
	  INTEGER_PACK_FORCE_BIGNUM to use rb_big_mul instead of rb_funcall.

Sat Jun  8 14:17:01 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: check for NET_LUID.  header macro varies across
	  complier versions.

	* win32/win32.c: use configured macro.

Sat Jun  8 11:59:55 2013  Tanaka Akira  <akr@fsij.org>

	* random.c (int_pair_to_real_inclusive): Use rb_funcall instead of
	  rb_big_mul because rb_integer_unpack can return a Fixnum.

Sat Jun  8 11:17:39 2013  Tanaka Akira  <akr@fsij.org>

	* random.c (int_pair_to_real_inclusive): Use rb_integer_pack.

Sat Jun  8 09:49:42 2013  Tanaka Akira  <akr@fsij.org>

	* random.c (int_pair_to_real_inclusive): Use rb_integer_unpack.

Sat Jun  8 08:12:22 2013  Tanaka Akira  <akr@fsij.org>

	* random.c (random_load): Use rb_integer_pack.

Sat Jun  8 06:15:46 2013  Tanaka Akira  <akr@fsij.org>

	* random.c (numberof): Removed.
